--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "react-dom": "^16.2.0",
     "react-modal": "2.2.2",
     "react-router-dom": "4.2.2",
+    "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
+    "uuid": "^3.1.0",
     "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.3",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "eslint": "^4.13.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0-beta.0",
