--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
   "scripts": {
     "serve": "live-server public/",
     "build": "webpack",
-    "dev-server": "webpack-dev-server"
+    "start": "webpack-dev-server"
   },
   "dependencies": {
+    "@types/react": "16.0.18",
+    "@types/react-dom": "16.0.2",
+    "axios": "^0.17.1",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
-    "babel-preset-env": "1.15.2",
+    "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
     "live-server": "^1.2.0",
@@ -23,11 +26,15 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal": "2.2.2",
+    "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
     "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
+    "ts-loader": "^3.3.0",
+    "typescript": "^2.6.2",
     "uuid": "^3.1.0",
+    "vanilla-tilt": "^1.4.1",
     "webpack": "3.1.0",
     "webpack-dev-server": "2.5.1"
   },
