changed the name of the app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expensify",
+  "name": "react-redux-expense-tracking",
   "version": "1.0.0",
   "main": "index.js",
   "author": "Onur Cankaya",
