set up production build and server

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 /node_modules/
 /src/playground/
 .vscode/
-/public/bundle.js/
-/public/bundle.js.map/
+public/bundle.js/
+public/bundle.js.map/
+public/styles.css/
+public/styles.css.map/
