--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-/node_modules/
-/src/playground/
+node_modules/
+src/playground/
 .vscode/
-public/bundle.js/
-public/bundle.js.map/
-public/styles.css/
-public/styles.css.map/
+public/dist/
