--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "author": "Onur Cankaya",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public/",
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "dev-server": "webpack-dev-server",
@@ -26,8 +25,6 @@
     "css-loader": "0.28.4",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
-    "jest": "20.0.4",
-    "live-server": "^1.2.0",
     "moment": "2.18.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
@@ -41,12 +38,9 @@
     "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
-    "ts-loader": "^3.3.0",
-    "typescript": "^2.6.2",
     "uuid": "^3.1.0",
     "vanilla-tilt": "^1.4.1",
-    "webpack": "3.1.0",
-    "webpack-dev-server": "2.5.1"
+    "webpack": "3.1.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.0.3",
@@ -61,6 +55,9 @@
     "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-react-native": "^3.2.0",
     "eslint-plugin-standard": "^3.0.1",
-    "prettier": "^1.9.2"
+    "jest": "20.0.4",
+    "live-server": "^1.2.0",
+    "prettier": "^1.9.2",
+    "webpack-dev-server": "2.5.1"
   }
 }
