--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "jest": "20.0.4",
     "live-server": "^1.2.0",
     "prettier": "^1.9.2",
+    "react-test-renderer": "16.0.0",
     "webpack-dev-server": "2.5.1"
   }
 }
