set up enzyme for testing components

--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "enzyme": "3.0.0",
+    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "3.0.1",
     "express": "4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "moment": "2.18.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
+    "raf": "3.3.2",
     "react": "^16.2.0",
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.7.0",
