--- a/package.json
+++ b/package.json
@@ -48,9 +48,10 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
+    "@rise-digital/eslint-config-rise": "^2.2.1",
     "babel-eslint": "^8.0.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "eslint": "^4.13.1",
+    "eslint": "^6.6.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
@@ -62,7 +63,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "jest": "20.0.4",
     "live-server": "^1.2.0",
-    "prettier": "^1.9.2",
+    "prettier": "^1.18.2",
     "react-test-renderer": "16.0.0",
     "webpack-dev-server": "2.5.1"
   }
