--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
-    "@rise-digital/eslint-config-rise": "^2.2.1",
     "babel-eslint": "^8.0.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "eslint": "^6.6.0",
+    "eslint-config-onur": "^1.3.4",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-plugin-import": "^2.8.0",
